--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,17 @@
   "remoteUser": "node",
   "features": {
     "ghcr.io/devcontainers-extra/features/npm-package:1": {}
+  },
+  "customizations": {
+    "jetbrains": {
+      "settings": {
+        "com.intellij:app:HttpConfigurable.use_proxy_pac": true,
+
+      },
+      "plugins": [
+        "com.github.catppuccin.jetbrains",
+        "com.github.catppuccin.jetbrains_icons"
+      ]
+    }
   }
 }
