--- a/Frontend_Booktopia/package.json
+++ b/Frontend_Booktopia/package.json
@@ -10,8 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/eslint": "^1.0.1",
+    "@nuxt/ui": "^2.21.0",
+    "eslint": "^9.20.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@iconify-json/ic": "^1.2.2"
   }
 }
