--- a/Frontend_Booktopia/package.json
+++ b/Frontend_Booktopia/package.json
@@ -11,13 +11,24 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.0.1",
+    "@nuxt/image": "^1.9.0",
     "@nuxt/ui": "^2.21.0",
+    "@vueuse/core": "^12.7.0",
     "eslint": "^9.20.1",
+    "motion-v": "^0.10.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@iconify-json/ic": "^1.2.2"
+    "@iconify-json/ic": "^1.2.2",
+    "@inspira-ui/plugins": "^0.0.1",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "postcss": "^8.5.2",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
