--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "booktopia",
   "private": true,
   "type": "module",
   "scripts": {
@@ -14,21 +14,28 @@
     "@nuxt/image": "^1.9.0",
     "@nuxt/ui": "^2.21.0",
     "@vueuse/core": "^12.7.0",
+    "@vueuse/integrations": "^12.7.0",
+    "@vueuse/nuxt": "^12.7.0",
     "eslint": "^9.20.1",
     "motion-v": "^0.10.0",
     "nuxt": "^3.15.4",
+    "shadcn-nuxt": "^0.11.3",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@iconify-json/ic": "^1.2.2",
+    "@iconify/json": "^2.2.309",
+    "@iconify/utils": "^2.3.0",
     "@inspira-ui/plugins": "^0.0.1",
+    "@nuxtjs/tailwindcss": "^6.13.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "postcss": "^8.5.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.7.3"
   }
 }
